Quorum3/Library/Tests/Actions/Pass/SetterBeforeUse.quorum
// This returns 0.
class SetterBeforeUse 
    integer a = 0

    action SetA
        a = 1
    end

    action Main
        output a
    end
    
end