Quorum3/Library/Tests/Actions/Fail/SetterBeforeUseFail.quorum
class SetterBeforeUseFail
    integer a

    action SetA
        a = 1
    end

    action Main
        output a
    end
end